// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleSetParentAliasRow/> No values 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-3"
  >
     
    <span>
      Parent Alias *
       
      <i
        className="fa fa-question-circle"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
  </div>
  <div
    className="has-error col-xs-3"
  >
    <input
      className="form-control"
      name="alias"
      onChange={[Function]}
      placeholder="Enter an Alias for import"
      type="text"
      value=""
    />
  </div>
  <div
    className="has-error col-xs-5"
  >
    <div
      className="form-group row"
    >
      <div
        className="sampleset-insert--parent-select"
      >
        <div
          className="Select Select--single is-clearable is-searchable"
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-2--value"
            >
              <div
                className="Select-placeholder"
              >
                Select a Sample Set...
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-2--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  id="selectinput-2"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="sample-insert--remove-parent"
    >
      <span
        className="container--action-button"
        onClick={[Function]}
      >
        <i
          className="fa fa-times container--removal-icon"
        />
        
      </span>
    </div>
  </div>
</div>
`;

exports[`<SampleSetParentAliasRow/> With parent value not an option in select 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-3"
  >
     
    <span>
      Parent Alias *
       
      <i
        className="fa fa-question-circle"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
  </div>
  <div
    className="col-xs-3"
  >
    <input
      className="form-control"
      name="alias"
      onChange={[Function]}
      placeholder="Enter an Alias for import"
      type="text"
      value="testAlias"
    />
  </div>
  <div
    className="col-xs-5"
  >
    <div
      className="form-group row"
    >
      <div
        className="sampleset-insert--parent-select"
      >
        <div
          className="Select Select--single is-clearable is-searchable"
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-5--value"
            >
              <div
                className="Select-placeholder"
              >
                Select a Sample Set...
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-5--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  id="selectinput-8"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </span>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="sample-insert--remove-parent"
    >
      <span
        className="container--action-button"
        onClick={[Function]}
      >
        <i
          className="fa fa-times container--removal-icon"
        />
        
      </span>
    </div>
  </div>
</div>
`;

exports[`<SampleSetParentAliasRow/> With values 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-3"
  >
     
    <span>
      Parent Alias *
       
      <i
        className="fa fa-question-circle"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </span>
  </div>
  <div
    className="col-xs-3"
  >
    <input
      className="form-control"
      name="alias"
      onChange={[Function]}
      placeholder="Enter an Alias for import"
      type="text"
      value="testAlias"
    />
  </div>
  <div
    className="col-xs-5"
  >
    <div
      className="form-group row"
    >
      <div
        className="sampleset-insert--parent-select"
      >
        <div
          className="Select Select--single is-clearable is-searchable has-value"
        >
          <input
            disabled={false}
            name="parentValue"
            type="hidden"
            value="materialInputs/test"
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-3--value"
            >
              <div
                className="Select-value"
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-3--value-item"
                  role="option"
                >
                  test
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-3--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  id="selectinput-4"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </span>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="sample-insert--remove-parent"
    >
      <span
        className="container--action-button"
        onClick={[Function]}
      >
        <i
          className="fa fa-times container--removal-icon"
        />
        
      </span>
    </div>
  </div>
</div>
`;
